[build-system]
requires = ["setuptools>=42", "wheel", "scikit-build"]

[tool.cibuildwheel]
# Super-verbose output for debugging purpose
build-verbosity = 3

# We restrict ourselves to CPython 3.6 and then repair the wheels to be
# independent of the Python version - I have not found a different solution
# within cibuildwheel to achieve this.
build = "cp38-*"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux1"
manylinux-i686-image = "manylinux1"
