[build-system]
requires = ["setuptools>=42", "wheel", "scikit-build"]

[tool.cibuildwheel]
# Super-verbose output for debugging purpose
build-verbosity = 3

# We restrict ourselves to CPython 3.6 and then repair the wheels to be
# independent of the Python version - I have not found a different solution
# within cibuildwheel to achieve this.
build = "cp38-*"

# Ensure recent versions of CMake and Ninja are installed
before-all = [
    "pipx install -f cmake>=3.21.0",
    "cmake --version",
    "pipx install -f ninja>=1.10.2",
    "ninja --version",
]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux1"
manylinux-i686-image = "manylinux1"
